# tensorflow_cpp_object_detection_web_server

./: CMakeLists.txt  crow_all.h  detect.h  main.cpp
